# pulsar

./: .clippy.toml  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  cliff.toml  justfile  wiki.md
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: changelog.yml  ci.yml  post-release.yml  release.yml
crates/pulsar-cli/: Cargo.toml
crates/pulsar-cli/src/: config.rs  main.rs  registry.rs
crates/pulsar-core/: Cargo.toml
crates/pulsar-core/src/: lib.rs
crates/pulsar-diag/: Cargo.toml
crates/pulsar-diag/src/: formatter.rs  json.rs  lib.rs  pretty.rs
crates/pulsar-frontend-oxc/: Cargo.toml
crates/pulsar-frontend-oxc/src/: lib.rs
crates/pulsar-frontend-prisma/: Cargo.toml
crates/pulsar-frontend-prisma/src/: lib.rs
crates/pulsar-frontend-prisma/tests/: proptest.proptest-regressions  proptest.rs
crates/pulsar-frontend-sql/: Cargo.toml
crates/pulsar-frontend-sql/src/: lib.rs
crates/pulsar-frontend-sql/tests/: proptest.rs
crates/pulsar-graph/: Cargo.toml
crates/pulsar-graph/src/: lib.rs
crates/pulsar-integration-tests/: Cargo.toml
crates/pulsar-integration-tests/src/: lib.rs
crates/pulsar-integration-tests/tests/: e2e_schema_aware.rs  e2e_ts_pipeline.rs  regression.rs
crates/pulsar-ir/: Cargo.toml
crates/pulsar-ir/src/: lib.rs
crates/pulsar-rules/: Cargo.toml
crates/pulsar-rules/src/: engine.rs  lib.rs  rule.rs  util.rs
crates/pulsar-rules/src/rules/: mod.rs  no_always_true_where.rs  no_missing_await.rs  no_missing_foreign_key.rs  no_missing_limit.rs  no_n_plus_one.rs  no_query_in_callback.rs  no_query_in_loop.rs  no_raw_sql_dangerous.rs  no_select_star.rs  no_unbounded_find.rs  no_unindexed_filter.rs  no_unknown_column.rs
crates/pulsar-rules/tests/: proptest.rs
crates/pulsar-test-utils/: Cargo.toml
crates/pulsar-test-utils/src/: builders.rs  factories.rs  fixtures.rs  lib.rs  rules.rs
demos/: clean.ts  db.ts  mistakes.ts  package.json  pulsar.toml  schema.ts  tsconfig.clean.json  tsconfig.json
demos/schema/: pulsar.toml  schema.prisma
demos/schema-aware/: clean.ts  violations.ts
docs/: research-frontend-oxc.md  research-orm-drizzle.md
fuzz/: Cargo.toml  latest-results.md
fuzz/fuzz_targets/: fuzz_combined.rs  fuzz_oxc_frontend.rs  fuzz_prisma_parser.rs  fuzz_sql_parser.rs
scripts/: install-hooks.sh
src/: lib.rs
test/fixtures/: basic.ts  clean.ts  mixed-star-explicit.ts  no-issues.ts  with-limit.ts  with-where.ts
test/fixtures/no-always-true-where/: where-real-condition.ts  where-true.ts
test/fixtures/no-missing-await/: missing-await.ts
test/fixtures/no-missing-foreign-key/: clean.ts
test/fixtures/no-missing-limit/: query-with-limit.ts
test/fixtures/no-n-plus-one/: clean.ts  query-in-for-of.ts
test/fixtures/no-query-in-callback/: query-in-then.ts
test/fixtures/no-query-in-loop/: query-in-for-loop.ts  query-outside-loop.ts
test/fixtures/no-raw-sql-dangerous/: sql-template.ts
test/fixtures/no-unbounded-find/: bounded-query.ts
test/fixtures/no-unindexed-filter/: clean.ts  filter-on-indexed-via-block.ts  filter-on-indexed.ts  filter-on-name.ts
test/fixtures/no-unknown-column/: select-wrong.ts
test/fixtures/schema/: pulsar.toml  schema.prisma
www/: .oxlintrc.json  README.md  cli.json  components.json  package.json  source.config.ts  waku.config.ts
www/content/docs/: getting-started.mdx  index.mdx  meta.json
www/content/docs/concepts/: index.mdx  ir-graph.mdx  meta.json  schema-aware.mdx
www/content/docs/guide/: ci-integration.mdx  cli.mdx  configuration.mdx  getting-started.mdx  index.mdx  meta.json
www/content/docs/rules/: index.mdx  meta.json  no-always-true-where.mdx  no-missing-await.mdx  no-missing-foreign-key.mdx  no-missing-limit.mdx  no-n-plus-one.mdx  no-query-in-callback.mdx  no-query-in-loop.mdx  no-raw-sql-dangerous.mdx  no-select-star.mdx  no-unbounded-find.mdx  no-unindexed-filter.mdx  no-unknown-column.mdx
www/content/docs/tutorials/: ci-cd.mdx  fixing-violations.mdx  index.mdx  meta.json  schema-aware.mdx  setup-drizzle.mdx
www/src/components/: mdx.tsx  mermaid.tsx  theme-logo.tsx
www/src/components/docs/: DocsHeader.tsx
www/src/components/landing/: demo.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx
www/src/components/ui/: button.tsx  card.tsx
www/src/lib/: layout.shared.tsx  og-template.tsx  shared.ts  source.ts
www/src/pages/: _root.tsx
www/src/pages/(home)/: _layout.tsx  index.tsx
www/src/pages/_api/llms.mdx/docs/[...slugs]/: content.md.ts
www/src/pages/_api/og/docs/[...slugs]/: image.webp.tsx
www/src/pages/_api/og/home/: image.webp.tsx
www/src/pages/docs/: [...slugs].tsx  _layout.tsx
www/src/styles/: globals.css
