[workspace]
resolver = "2"
members = [
    "crates/pulsar-core",
    "crates/pulsar-ir",
    "crates/pulsar-frontend-oxc",
    "crates/pulsar-frontend-sql",
    "crates/pulsar-frontend-prisma",
    "crates/pulsar-graph",
    "crates/pulsar-rules",
    "crates/pulsar-diag",
    "crates/pulsar-cli",
]

[package]
name = "pulsar-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
pulsar-core = { path = "crates/pulsar-core" }
pulsar-ir = { path = "crates/pulsar-ir" }
pulsar-frontend-oxc = { path = "crates/pulsar-frontend-oxc" }
pulsar-frontend-sql = { path = "crates/pulsar-frontend-sql" }
pulsar-frontend-prisma = { path = "crates/pulsar-frontend-prisma" }
pulsar-graph = { path = "crates/pulsar-graph" }
pulsar-rules = { path = "crates/pulsar-rules" }
pulsar-diag = { path = "crates/pulsar-diag" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
anyhow = "1"
petgraph = "0.6"
oxc = "0.44"
sqlparser = "0.51"
owo-colors = "4"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"
