[workspace]
resolver = "2"
members = [
    "crates/pulsar-core",
    "crates/pulsar-ir",
    "crates/pulsar-frontend-oxc",
    "crates/pulsar-frontend-sql",
    "crates/pulsar-frontend-prisma",
    "crates/pulsar-graph",
    "crates/pulsar-rules",
    "crates/pulsar-diag",
    "crates/pulsar-cli",
    "crates/pulsar-test-utils",
]

[package]
name = "pulsar-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
pulsar-core = { path = "crates/pulsar-core" }
pulsar-ir = { path = "crates/pulsar-ir" }
pulsar-frontend-oxc = { path = "crates/pulsar-frontend-oxc" }
pulsar-frontend-sql = { path = "crates/pulsar-frontend-sql" }
pulsar-frontend-prisma = { path = "crates/pulsar-frontend-prisma" }
pulsar-graph = { path = "crates/pulsar-graph" }
pulsar-rules = { path = "crates/pulsar-rules" }
pulsar-diag = { path = "crates/pulsar-diag" }
pulsar-test-utils = { path = "crates/pulsar-test-utils" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
petgraph = "0.6"
oxc = "0.44"
sqlparser = "0.51"
owo-colors = "4"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
tempfile = "3"
proptest = "1"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Allow custom modifications to dist-managed CI files
allow-dirty = ["ci"]

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
