[package]
name = "pulsar-cli"
version = "0.2.0"
edition = "2021"
description = "Pulsar CLI - static analyzer with a linter interface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carlosedujs/pulsar"
readme = "../../README.md"
keywords = ["pulsar", "cli", "static-analysis"]
categories = ["development-tools::static-analysis"]

[dependencies]
pulsar-core.workspace = true
pulsar-frontend-oxc.workspace = true
pulsar-rules.workspace = true
pulsar-diag.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
ignore.workspace = true
oxc.workspace = true

[lints]
workspace = true
