[package]
name = "pulsar-cli"
version = "0.5.1"
edition = "2021"
description = "Pulsar CLI - static analyzer with a linter interface"
license = "MIT OR Apache-2.0"
homepage = "https://pulsar-iota-inky.vercel.app"
repository = "https://github.com/carlosedujs/pulsar"
readme = "../../README.md"
keywords = ["pulsar", "cli", "static-analysis"]
categories = ["development-tools::static-analysis"]

[dependencies]
pulsar-core.workspace = true
pulsar-ir.workspace = true
pulsar-frontend-oxc.workspace = true
pulsar-frontend-prisma.workspace = true
pulsar-rules.workspace = true
pulsar-diag.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
ignore.workspace = true
oxc.workspace = true

[dev-dependencies]
pulsar-test-utils.workspace = true
tempfile.workspace = true

[lints]
workspace = true
