[package]
name = "pulsar-core"
version = "0.1.0"
edition = "2021"
description = "Core types, traits, and PIR definitions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carlosedujs/pulsar"
readme = "README.md"
keywords = ["pulsar", "static-analysis", "linter"]
categories = ["development-tools::static-analysis"]

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
pulsar-test-utils.workspace = true
serde_json.workspace = true

[lints]
workspace = true
