[package]
name = "pulsar-frontend-oxc"
version = "0.1.0"
edition = "2021"
description = "Oxc frontend: TypeScript/JavaScript AST to PIR"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carlosedujs/pulsar"
readme = "README.md"
keywords = ["pulsar", "oxc", "typescript", "parser"]
categories = ["development-tools::static-analysis"]

[dependencies]
pulsar-core.workspace = true
pulsar-graph.workspace = true
pulsar-ir.workspace = true
oxc.workspace = true
thiserror.workspace = true

[lints]
workspace = true
