[package]
name = "pulsar-frontend-prisma"
version = "0.1.0"
edition = "2021"
description = "Prisma frontend: Prisma schema to PIR"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carlosedujs/pulsar"
readme = "README.md"
keywords = ["pulsar", "prisma", "orm"]
categories = ["development-tools::static-analysis"]

[dependencies]
pulsar-ir.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
