[package]
name = "pulsar-graph"
version = "0.1.0"
edition = "2021"
description = "Graph construction and linking for PIR"
license = "MIT OR Apache-2.0"
repository = "https://github.com/carlosedujs/pulsar"
readme = "README.md"
keywords = ["pulsar", "graph", "dependency-graph"]
categories = ["development-tools::static-analysis"]

[dependencies]
pulsar-core.workspace = true
pulsar-ir.workspace = true

[dev-dependencies]
pulsar-test-utils.workspace = true

[lints]
workspace = true
