[package]
name = "pulsar-rules"
version = "0.1.0"
edition = "2021"
description = "Rule engine and rule definitions for Pulsar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pulsar-analyzer/pulsar"
readme = "README.md"
keywords = ["pulsar", "rules", "lint"]
categories = ["development-tools::static-analysis"]

[dependencies]
pulsar-core.workspace = true
pulsar-ir.workspace = true
pulsar-graph.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
